--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@ layout: default
 </div>
 <!-- <script src="{{ "/js/scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
 <!-- <script src="{{ "/js/pageContent.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
-<script src="{{ '/js/jquery.min.js ' | prepend: site.baseurl }}" charset="utf-8"></script>
-<!--<script src="http://code.jquery.com/jquery-1.4.1.min.js" charset="utf-8"></script>-->
+<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
 <script>
     $.ajax({
         url:"http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
