--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ layout: default
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
 <script>
     $.ajax({
-        url: "http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
+        url: "https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         type: "GET",
         dataType: "json",
         success: function (data) {
