--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
+        <table>
+            <thead>
+            <tr>
+                <td>用户名</td>
+                <td>邮箱</td>
+                <td>电话</td>
+                <td>创建时间</td>
+            </tr>
+            </thead>
+            <tbody id="userTbody"></tbody>
+        </table>
         <h1>Welcome to LuoAnyu's blog </h1>
         <small></small>
         <hr>
@@ -144,21 +155,11 @@ layout: default
                 </div>
             </div>
 
-             <div class="side">
+             <!--<div class="side">
                 <div>
-                    <table>
-                        <thead>
-                        <tr>
-                            <td>用户名</td>
-                            <td>邮箱</td>
-                            <td>电话</td>
-                            <td>创建时间</td>
-                        </tr>
-                        </thead>
-                        <tbody id="userTbody"></tbody>
-                    </table>
+
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
@@ -190,6 +191,18 @@ layout: default
         }, error: function(data){
             console.info("请求失败");
             console.info(data);
+            var html = "";
+            var results = data.results;
+            for (var i=0; i<results.length; i++) {
+                var user = results[i];
+                html += "<tr>"
+                    +  "   <td>" + user.username + "</td>"
+                    +  "   <td>" + user.email + "</td>"
+                    +  "   <td>" + user.mobilePhoneNumber + "</td>"
+                    +  "   <td>" + user.createdAt + "</td>"
+                    +  "</tr>"
+            }
+            $("#userTbody").append(html);
         }
     });
 </script>
