--- a/index.html
+++ b/index.html
@@ -178,31 +178,35 @@ layout: default
             console.info("请求成功");
             var html = "";
             var results = data.results;
-            for (var i=0; i<results.length; i++) {
-                var user = results[i];
-                html += "<tr>"
-                     +  "   <td>" + user.username + "</td>"
-                     +  "   <td>" + user.email + "</td>"
-                     +  "   <td>" + user.mobilePhoneNumber + "</td>"
-                     +  "   <td>" + user.createdAt + "</td>"
-                     +  "</tr>"
+            if (results) {
+                for (var i = 0; i < results.length; i++) {
+                    var user = results[i];
+                    html += "<tr>"
+                        + "   <td>" + user.username + "</td>"
+                        + "   <td>" + user.email + "</td>"
+                        + "   <td>" + user.mobilePhoneNumber + "</td>"
+                        + "   <td>" + user.createdAt + "</td>"
+                        + "</tr>";
+                }
+                $("#userTbody").append(html);
             }
-            $("#userTbody").append(html);
         }, error: function(data){
             console.info("请求失败");
             console.info(data);
             var html = "";
             var results = data.results;
-            for (var i=0; i<results.length; i++) {
-                var user = results[i];
-                html += "<tr>"
-                    +  "   <td>" + user.username + "</td>"
-                    +  "   <td>" + user.email + "</td>"
-                    +  "   <td>" + user.mobilePhoneNumber + "</td>"
-                    +  "   <td>" + user.createdAt + "</td>"
-                    +  "</tr>"
+            if (results) {
+                for (var i = 0; i < results.length; i++) {
+                    var user = results[i];
+                    html += "<tr>"
+                        + "   <td>" + user.username + "</td>"
+                        + "   <td>" + user.email + "</td>"
+                        + "   <td>" + user.mobilePhoneNumber + "</td>"
+                        + "   <td>" + user.createdAt + "</td>"
+                        + "</tr>";
+                }
+                $("#userTbody").append(html);
             }
-            $("#userTbody").append(html);
         }
     });
 </script>
