--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ layout: default
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
 <script>
     $.ajax({
-        url: "http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
+        url: "https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         type: "post",
         header:{"X-Bmob-Application-Id": "f15aed430856ab95e8f5c95e36aa8efb",
                 "X-Bmob-REST-API-Key": "decee84df03ffa14f73d1231bd060cf7",
