--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ layout: default
     $.ajax({
         url: "https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         type: "post",
-        header:{"X-Bmob-Application-Id": "f15aed430856ab95e8f5c95e36aa8efb",
+        headers:{"X-Bmob-Application-Id": "f15aed430856ab95e8f5c95e36aa8efb",
                 "X-Bmob-REST-API-Key": "decee84df03ffa14f73d1231bd060cf7",
                 "Content-Type": "application/json"},
         data:{"name": "tom"},
