--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@ layout: default
                 "X-Bmob-REST-API-Key": "decee84df03ffa14f73d1231bd060cf7",
                 "Content-Type": "application/json"},
         data:{"name": "tom"},
+        dataType:'jsonp',
+        jsonp:'callback',
+        jsonpCallback:"successCallback",
         success: function (data) {
             console.info("请求成功");
             var html = "";
