--- a/index.html
+++ b/index.html
@@ -168,6 +168,31 @@ layout: default
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
 <script>
     $.ajax({
+        url:"http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
+        dataType:'jsonp',
+        data:{"name": "tom"},
+        jsonp:'callback',
+        success:function(result) {
+            console.info("请求成功");
+            var html = "";
+            var data = result.results;
+            console.info(data);
+            if (data) {
+                for (var i = 0; i < data.length; i++) {
+                    var user = data[i];
+                    html += "<tr>"
+                        + "   <td>" + user.username + "</td>"
+                        + "   <td>" + user.email + "</td>"
+                        + "   <td>" + user.mobilePhoneNumber + "</td>"
+                        + "   <td>" + user.createdAt + "</td>"
+                        + "</tr>";
+                }
+                $("#userTbody").append(html);
+            }
+        }
+    });
+
+/*$.ajax({
         url: "https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         type: "post",
         headers:{"X-Bmob-Application-Id": "f15aed430856ab95e8f5c95e36aa8efb",
@@ -212,5 +237,5 @@ layout: default
                 $("#userTbody").append(html);
             }
         }
-    });
+    });*/
 </script>
