--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ layout: default
     $.ajax({
         url:"http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         dataType:'jsonp',
-        data:{"name": "tom"},
+//        data:{"name": "tom"},
         jsonp:'callback',
         success:function(result) {
             console.info("请求成功");
