--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@ layout: default
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
 <script>
     $.ajax({
-        url:"http://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
+        url:"https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         dataType:'jsonp',
-//        data:{"name": "tom"},
+        data:{"name": "tom"},
         jsonp:'callback',
+        jsonpCallback:"successCallback",
         success:function(result) {
             console.info("请求成功");
             var html = "";
