--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ layout: default
         jsonp:'callback',
         jsonpCallback:"successCallback",
         success:function(result) {
+            result = JSON.stringify(result);
             console.info("请求成功");
             var html = "";
             var data = result.results;
