--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ layout: default
 <script>
     $.ajax({
         url:"https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
-        dataType:'jsonp',
+        dataType:'json',
         data:{"name": "tom"},
-        jsonp:'callback',
-        jsonpCallback:"successCallback",
+//        jsonp:'callback',
+//        jsonpCallback:"successCallback",
         success:function(result) {
 //            result = JSON.stringify(result);
             result = eval("("+result+")");
