--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@ layout: default
         url:"https://javacloud.bmob.cn/5dc4eb7322f847eb/testdb",
         dataType:'json',
         data:{"name": "tom"},
+        headers:{"X-Bmob-Application-Id": "f15aed430856ab95e8f5c95e36aa8efb",
+            "X-Bmob-REST-API-Key": "decee84df03ffa14f73d1231bd060cf7",
+            "Content-Type": "application/json"},
 //        jsonp:'callback',
 //        jsonpCallback:"successCallback",
         success:function(result) {
